[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Patrick White <patrick@patrickwhite.org>"]
edition = "2018"
default-run = "aoc2020"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.2"
num = "0.3.1"
lazy_static = "1.4.0"
daggy = "0.7.0"
thiserror = "1.0.22"
num-integer = "0.1.44"
